# sdg-engine

./: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  setup.py
docker/: Dockerfile  README.md  run.sh
docs/: build.md  docker.md  index.md  start_introduction.md  命名规范.md  环境搭建.md  端口分配.md
docs/sdd/: 时序图.mdj  类图.mdj  部署图.mdj
docs/setup/: build.md  docker.md  faq.md
src/: main.py
src/main/: adapted_actor.py  autoware_adapter.py  carla_adapter.py  engine.py  scenest_carla_adapter.py  scenic_carla_adapter.py  video_server.py
src/scenest_parser/inputs/: input10(npc rear end absolutely).txt  input2(ego+3NPC).txt  input6(assertion).txt  input7(npc rear end).txt  input8(auto many).txt  input9(car following).txt
src/scenic_parser/inputs/: follow.scenic  many.scenic
src/tests/: test.txt  websocket_long.py
src/tools/: auto_criteria.py  traffic_events.py  utils.py
